roboto font and monochrrome social icons

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <div class="social-links">
             <span v-if="activeGroup.facebook" class="social">
               <a :href="activeGroup.facebook">
-                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
             </span>
             <span v-if="activeGroup.twitter" class="social">
               <a :href="activeGroup.twitter">
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
             </span>
             <span v-if="activeGroup.instagram" class="social">
@@ -55,6 +55,7 @@
         </div>
       </div>
     </div>
+    <link rel="stylesheet" id="vc_google_fonts_roboto100100italic300300italicregularitalic500500italic700700italic900900italic-css" href="//fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C700%2C700italic%2C900%2C900italic" type="text/css" media="all">
     <link href="map.css" rel="stylesheet" />
     <script src="map.js" id="mapjs" data-token="pk.eyJ1IjoibWFyY2gtb24iLCJhIjoiY2o5N3JkMGE2MDM2aTJxcGFwYXQ4MnNkNiJ9.S51iIlKgalNz3Usq_1_yCQ"></script>
   </body>
