--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
-  <body class="ragtag-marchon-map">
+  <body class="ragtag-marchon-map affiliates">
     <div id="mapApp">
       <div id="map" class="content"></div>
       <div id="affiliate" class="content">
@@ -106,6 +106,6 @@
     <link rel="stylesheet" id="vc_google_fonts_roboto100100italic300300italicregularitalic500500italic700700italic900900italic-css" href="//fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C700%2C700italic%2C900%2C900italic" type="text/css" media="all">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
     <link href="map.css" rel="stylesheet" />
-    <script src="map.js" id="mapjs" data-token="pk.eyJ1IjoibWFyY2gtb24iLCJhIjoiY2o5N3JkMGE2MDM2aTJxcGFwYXQ4MnNkNiJ9.S51iIlKgalNz3Usq_1_yCQ"></script>
+    <script src="map.js" id="mapjs" data-filename="affiliates.json" data-token="pk.eyJ1IjoibWFyY2gtb24iLCJhIjoiY2o5N3JkMGE2MDM2aTJxcGFwYXQ4MnNkNiJ9.S51iIlKgalNz3Usq_1_yCQ"></script>
   </body>
 </html>
