the contacts link is now a mailto, not a relative href

--- a/events.html
+++ b/events.html
@@ -52,8 +52,8 @@
                       <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                   </span>
-                  <span v-if="activeGroup.contactEmail" class="social-link">
-                    <a :href="activeGroup.contactEmail" target="_blank">
+                  <span v-if="activeGroup.mailto" class="social-link">
+                    <a :href="activeGroup.mailto" target="_blank">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </a>
                   </span>
