--- a/events.html
+++ b/events.html
@@ -30,8 +30,8 @@
                 </div>
               </div>
               <div class="info pull-left">
-                <div v-if="activeGroup.eventLink" class="event-link">
-                  <a :href="activeGroup.eventLink" target="_blank">Find out more</a>
+                <div v-if="activeGroup.motpLink" class="event-link">
+                  <a :href="activeGroup.motpLink" target="_blank">Find out more</a>
                 </div>
                 <div v-if="activeGroup.host" class="hosted-by">
                   Hosted by: {{activeGroup.host}}
