--- a/family_separation_events.html
+++ b/family_separation_events.html
@@ -30,17 +30,11 @@
                 </div>
               </div>
               <div v-if="activeGroup.eventLink" class="fs-event-link">
-                  <a :href="activeGroup.eventLink">Event link</a>
+                  <a :href="activeGroup.eventLink">See details</a>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div id="layerFilterControl" class="mapboxgl-ctrl">
-        <ragtag-layerfilter
-          :layers="mapLayers"
-          @layer-change="layerDisplayChange"
-        ></ragtag-layerfilter>
       </div>
     </div>
     <div id="userMarker">
