open link in new window

--- a/family_separation_events.html
+++ b/family_separation_events.html
@@ -36,7 +36,7 @@
                   <div>{{activeGroup.city}}, {{activeGroup.country}}</div>
               </div>
               <div v-if="activeGroup.eventLink" class="fs-event-link">
-                  <a :href="activeGroup.eventLink">See details</a>
+                  <a target="_blank" :href="activeGroup.eventLink">See details</a>
               </div>
             </div>
           </div>
