change the check for motpLink to v-else-if, so we only get there if there is no eventLink property

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div v-if="activeGroup.eventLink" class="event-link">
                   <a :href="activeGroup.eventLink" target="_blank">Find out more</a>
                 </div>
-                <div v-if="activeGroup.motpLink" class="event-link">
+                <div v-else-if="activeGroup.motpLink" class="event-link">
                   <a :href="activeGroup.motpLink" target="_blank">Find out more</a>
                 </div>
                 <div v-if="activeGroup.host" class="hosted-by">
