--- a/climate_strike_events.html
+++ b/climate_strike_events.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
-  <body class="ragtag-marchon-events events">
+  <body class="ragtag-marchon-events events climate">
     <div id="mapApp">
       <div id="map" class="content"></div>
       <div id="popupContent">
@@ -64,25 +64,10 @@
           </div>
         </div>
       </div>
-      <div id="layerFilterControl" class="mapboxgl-ctrl">
-        <ragtag-layerfilter
-          :layers="mapLayers"
-          @layer-change="layerDisplayChange"
-        ></ragtag-layerfilter>
-      </div>
     </div>
     <div id="userMarker">
       <i class="fa fa-circle"></i>
     </div>
-    <script type="text/x-template" id="layerfilter-template">
-      <div class="map-widget filter-widget">
-        <template v-for="layer in layers">
-          <div>
-            <label v-if="layer.labelVisible == true" for="layer.layerId"><img :src="'assets/'+layer.icon">{{layer.label}}</label>
-          </div>
-        </template>
-      </div>
-    </script>
     <link rel="stylesheet" id="vc_google_fonts_roboto100100italic300300italicregularitalic500500italic700700italic900900italic-css" href="//fonts.googleapis.com/css?family=Roboto%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C700%2C700italic%2C900%2C900italic" type="text/css" media="all">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
     <link href="map.css" rel="stylesheet" />
